manifests/svc/traefik-testing/whoami-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-api
  namespace: shared-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-api
  template:
    metadata:
      labels:
        app: whoami-api
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-api
  namespace: shared-services
spec:
  selector:
    app: whoami-api
  ports:
  - port: 80
